# szd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  memmem.c  util.cpp  util.h  zip.cpp  zip.h
.github/workflows/: make.yml
examples/: example1.sh  example2.mwe  example2.sh  test.app.new.mwe  test.cpp
src/: main.cpp  memmem.c  memmem.h  util.h
src/zip/: LocalHeader.h  cdr.cpp  cdr.h  eocdr.cpp  eocdr.h  zip.cpp  zip.h
zip/: LocalHeader.cpp  LocalHeader.h  cdr.cpp  cdr.h  eocdr.cpp  eocdr.h  zip.cpp  zip.h
